--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   rake spec
 
 install:
-  gem install --development ontopia-topicmaps
+  gem install --prerelease --development ontopia-topicmaps
 
 before_install:
   - sudo wget http://ontopia.googlecode.com/files/ontopia-5.3.0.zip -O /usr/local/ontopia.zip
