--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ matrix:
   fast_finish:
     true
 
+env:
+  global:
+    - OTM_BASE=/tmp/ontopia
+
 script:
   rake spec
 
@@ -19,5 +23,8 @@ install:
   gem install --prerelease --development ontopia-topicmaps
 
 before_install:
-  - sudo wget http://ontopia.googlecode.com/files/ontopia-5.3.0.zip -O /usr/local/ontopia.zip
-  - sudo unzip /usr/local/ontopia.zip -d /usr/local/ontopia
+  - wget http://ontopia.googlecode.com/files/ontopia-5.3.0.zip -O $OTM_BASE.zip
+  - unzip $OTM_BASE.zip -d $OTM_BASE
+
+sudo:
+  false
