--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ script:
   rake spec
 
 install:
-  gem install --prerelease --development ontopia-topicmaps
+  - gem install nuggets
+  - gem install --prerelease --development ontopia-topicmaps
 
 before_install:
   - wget http://ontopia.googlecode.com/files/ontopia-5.3.0.zip -O $OTM_BASE.zip
